; ModuleID = '/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-data.c_b_account_date.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-data.c_b_account_date.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OTree = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @b_account_date to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @b_account_date(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i32 -1, i32* %4, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call i8* @listree_lookup_large(i32* @OTree, i32 %6, i32* %4)
  store i8* %7, i8** %5, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = icmp ne i8* %8, inttoptr (i64 -1 to i8*)
  br i1 %9, label %10, label %14

10:                                               ; preds = %1
  %11 = load i8*, i8** %5, align 8
  %12 = call i32 @SMALL_NODE(i8* %11)
  %13 = call i32 @btree_account_date(i32 %12)
  store i32 %13, i32* %2, align 4
  br label %17

14:                                               ; preds = %1
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @barray_account_date(i32 0, i32 %15)
  store i32 %16, i32* %2, align 4
  br label %17

17:                                               ; preds = %14, %10
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local i8* @listree_lookup_large(i32*, i32, i32*) #1

declare dso_local i32 @btree_account_date(i32) #1

declare dso_local i32 @SMALL_NODE(i8*) #1

declare dso_local i32 @barray_account_date(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
